--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li>
                     <a href="#">
                         More
-                        <i class="nav-arrow-down fa-solid fa-caret-down"></i>
+                        <i class="nav-arrow-down fa-solid fa-caret-down fa-spin"></i>
                     </a>
                     <ul class="subnav">
                         <li><a href="#">Mechandise</a></li>
